--- a/app1/templates/displayusers.html
+++ b/app1/templates/displayusers.html
@@ -27,7 +27,12 @@
 </table>
 {% if messages %}
     {% for i in messages %}
-        <h4 class="text-light">{{i}}</h4>
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>{{i}}</strong>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
     {% endfor %}
 {% endif %}
 {% endblock %}
